tests/characterization/snapshots/characterization__lifecycle__cloud_local_stop_absent.snap
---
source: tests/characterization/lifecycle.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
worker is not running.
--- stderr ---
--- end ---
