tests/characterization/snapshots/characterization__lifecycle__manager_stop_help.snap
---
source: tests/characterization/lifecycle.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
Usage:
  oqtopus manager stop
--- stderr ---
--- end ---
